[package]
name = "gap_the_mind"
version = "0.1.0"
authors = ["Matthieu Dartiguenave <matthieu.dartiguenave@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.13.8"
tantivy = "0.12.0"
serde = {version = "1.0.114", features = ["derive"] }
toml = "0.5.6"
uuid = { version = "0.7.4", features = ["serde", "v4"] }
chrono = "0.4.13"
juniper ={ version = "0.14.2", features = ["uuid"]}
